--- a/src/styles/variable.scss
+++ b/src/styles/variable.scss
@@ -1,2 +1,6 @@
 
-$color : rgb(0, 17, 255)
+$color : rgb(0, 17, 255);
+$base-menu-width: 260px;
+$base-menu-background: #001529;
+//顶部导航的高度
+$base-tabbar-height:50px;
